--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PhotoViewerActivity"
+                  android:label="@string/app_name"/>
         <service android:name="com.stratazima.flickrviewer.processes.NetworkServices"/>
     </application>
 
