--- a/Rebased/home/src/main/AndroidManifest.xml
+++ b/Rebased/home/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity
             android:name=".FlickrPhotoDetailActivity"
             android:label="@string/title_flickrphoto_detail"
-            android:parentActivityName=".FlickrPhotoListActivity" >
+            android:parentActivityName=".FlickrPhotoListActivity"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.stratazima.flickrviewer.home.FlickrPhotoListActivity" />
